--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#01f7f3">
     <meta name="msapplication-TileColor" content="#01f7f3">
     <meta name="theme-color" content="#01f7f3">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- CSS, fonts -->
     <link rel="stylesheet" href="fonts/SanFrancisco/stylesheet.css" />
     <title>Todo List</title>
